everything works in frontend and in menu (w/o interface and polymorphism, and no restricting logic)